# code-context

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  eval.yml  release.yml
benchmarks/: sprint-1-chunk-quality.md  sprint-2-embedding-quality.md  sprint-3-hybrid-quality.md  sprint-4-symbol-tools.md  sprint-5-tree-and-diff-tools.md  sprint-6-incremental-reindex.md  sprint-7-background-reindex.md
benchmarks/eval/: README.md  __init__.py  build_v1_10_1_baseline.py  ci_baseline.py  config_models.py  queries.json  run_v1_10_1_matrix.ps1  runner.py
benchmarks/eval/configs/: hybrid.yaml  hybrid_rerank.yaml  multi.yaml  vector_only.yaml
benchmarks/eval/queries/: cpp.json  csharp.json  go.json  java.json  python.json  rust.json  typescript.json
benchmarks/eval/results/: baseline.json
docs/: architecture.md  configuration.md  extending.md  index.md  integrations.md  release.md  telemetry.md  v1-api.md
docs/superpowers/plans/: 2026-05-05-v1.1-roadmap.md  strategic-roadmap-v2.md
docs/superpowers/plans/sprints/: SESSION-PROMPT-sprints-18-23.md  sprint-10-quality.md  sprint-11-reach.md  sprint-12-5-pre-launch-hardening.md  sprint-12-latency.md  sprint-13-0-mcp-windows-deadlock.md  (+14 more)
scripts/: bench_sprint6.py  bench_sprint7.py  debug_hybrid.py  phase0-status.py  smoke_sprint5.py
src/code_context/: __init__.py  _background.py  _cache_io.py  _composition.py  _doctor.py  _first_run.py  _telemetry.py  _time_parse.py  _watcher.py  cli.py  config.py  server.py
src/code_context/domain/: _tier.py  index_bus.py  models.py  ports.py
tests/contract/: test_contract.py  test_hf_models.py  test_jina_load.py
tests/fixtures/cpp_repo/: .gitignore  CMakeLists.txt  README.md
tests/fixtures/cpp_repo/include/api/: config.hpp  database.hpp
tests/fixtures/cpp_repo/include/api/dto/: auth_dto.hpp  item_dto.hpp  user_dto.hpp
tests/fixtures/cpp_repo/include/api/error/: api_error.hpp
tests/fixtures/cpp_repo/include/api/handlers/: auth_handler.hpp  items_handler.hpp  users_handler.hpp
tests/fixtures/cpp_repo/include/api/middleware/: auth_middleware.hpp  logging_middleware.hpp
tests/fixtures/cpp_repo/include/api/models/: item.hpp  user.hpp
tests/fixtures/cpp_repo/include/api/repository/: item_repository.hpp  user_repository.hpp
tests/fixtures/cpp_repo/include/api/services/: auth_service.hpp  item_service.hpp  user_service.hpp
tests/fixtures/cpp_repo/src/: config.cpp  database.cpp  main.cpp
tests/fixtures/cpp_repo/src/handlers/: auth_handler.cpp  items_handler.cpp  users_handler.cpp
tests/fixtures/cpp_repo/src/middleware/: auth_middleware.cpp  logging_middleware.cpp
tests/fixtures/cpp_repo/src/repository/: item_repository.cpp  user_repository.cpp
tests/fixtures/cpp_repo/src/services/: auth_service.cpp  item_service.cpp  user_service.cpp
tests/fixtures/cpp_repo/tests/: auth_test.cpp  items_test.cpp  users_test.cpp
tests/fixtures/go_repo/: .gitignore  README.md  go.mod
tests/fixtures/java_repo/: .gitignore  README.md  pom.xml
tests/fixtures/python_repo/: .gitignore  README.md  pyproject.toml
tests/fixtures/python_repo/src/app/: config.py  database.py  main.py
tests/fixtures/python_repo/src/app/models/: item.py  user.py
tests/fixtures/python_repo/src/app/repositories/: item_repository.py  user_repository.py
tests/fixtures/python_repo/src/app/routers/: auth.py  items.py  users.py
tests/fixtures/python_repo/src/app/schemas/: auth.py  item.py  user.py
tests/fixtures/python_repo/src/app/services/: auth_service.py  item_service.py  user_service.py
tests/fixtures/python_repo/tests/: conftest.py  test_auth.py  test_items.py  test_users.py
tests/fixtures/rust_repo/: Cargo.toml  README.md
tests/fixtures/rust_repo/src/: config.rs  database.rs  error.rs  main.rs
tests/fixtures/rust_repo/src/dto/: auth_dto.rs  item_dto.rs  mod.rs  user_dto.rs
tests/fixtures/rust_repo/src/handlers/: auth.rs  items.rs  mod.rs  users.rs
tests/fixtures/rust_repo/src/middleware/: auth.rs  logging.rs  mod.rs
tests/fixtures/rust_repo/src/models/: item.rs  mod.rs  user.rs
tests/fixtures/rust_repo/src/repository/: item_repository.rs  mod.rs  user_repository.rs
tests/fixtures/rust_repo/src/services/: auth_service.rs  item_service.rs  mod.rs  user_service.rs
tests/fixtures/rust_repo/tests/: auth_test.rs  items_test.rs  users_test.rs
tests/fixtures/rust_repo/tests/common/: mod.rs
tests/fixtures/tiny_repo/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
tests/fixtures/ts_repo/: README.md  package.json
tests/integration/: test_background_reindex.py  test_chunker_treesitter_real.py  test_code_source_real.py  test_embed_cache_persistent.py  test_eval_multi_runner.py  test_git_source_real.py  test_indexer_e2e.py  test_indexer_hybrid_e2e.py  test_mcp_explain_diff.py  test_mcp_recent_changes.py  test_mcp_search_repo.py  test_symbol_index_real.py  test_tree_and_diff_real.py
tests/unit/: test_background_indexer.py  test_cache_io.py  test_ci_baseline.py  test_cli_cache.py  test_composition.py  test_config.py  test_doctor.py  test_eval_config_models.py  test_first_run.py  test_index_bus.py  test_mcp_handle_recent.py  test_mcp_handle_refresh.py  test_phase0_status.py  test_server_warmup.py  test_setup_logging.py  test_telemetry.py  test_telemetry_t4.py  test_telemetry_t5.py  test_time_parse.py  test_watcher.py  test_watcher_git.py
tests/unit/adapters/: test_chunker_dispatcher.py  test_chunker_line.py  test_chunker_treesitter.py  test_code_source_fs.py  test_embed_cache_sqlite.py  test_embeddings_local.py  test_embeddings_openai.py  test_git_source_async.py  test_git_source_cli.py  test_introspector_fs.py  test_keyword_index_sqlite.py  test_reranker_crossencoder.py  test_symbol_index_sqlite.py  test_vector_store_numpy.py
tests/unit/domain/: test_explain_diff.py  test_find_definition.py  test_find_references.py  test_find_references_rerank.py  test_get_file_tree.py  test_get_summary.py  test_indexer.py  test_models.py  test_recent_changes.py  test_search_repo.py  test_search_repo_tier.py  test_tier.py
(+148 files in other folders)
